<resources>
    <string name="app_name">CGMarketPlace</string>
    <string name="tv_login">WELCOME,</string>
    <string name="tv_sub_login">LET\'S SIGN IN</string>
    <string name="tv_login_button">Login</string>
    <string name="tv_password">Password</string>
    <string name="tv_email">Email</string>
    <string name="tv_username">Username</string>
    <string name="tv_confirm_password">Re - Type Password</string>
    <string name="tv_login_here">Login Here</string>
    <string name="tv_create_account">Don\'t have account ?</string>
    <string name="tv_reg_here">Register Here</string>
    <string name="tv_register">REGISTER,</string>
    <string name="tv_sub_register">FOR SIGN IN</string>
    <string name="tv_register_button">CREATE ACCOUNT</string>
    <string name="tv_have_account">Have an account ?</string>
    <string name="tv_skip">SKIP</string>
    <string name="tv_next">NEXT</string>
    <string name="land_page_1_desc">Christopher Guy Harrison first became inspired by the world of decorative stylewhile growing up in the 1970s along the shoreline of the French Riviera.</string>
    <string name="land_page_1_title">About Mr CG</string>
    <string name="land_page_2_title">How We Made</string>
    <string name="land_page_2_desc">Christopher guy always makes furniture designs very calculated. so, produce a good product and in accordance with buyer expectations</string>
    <string name="land_page_3_title">What is Christopher Guy App ?</string>
    <string name="land_page_3_desc">This application is a marketplace that provides a variety of home furniture. So, do you want</string>
    <string name="tv_logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_category">Categories</string>
    <string name="tv_discover">Discover</string>
    <string name="tv_greet_user">Halo, User!</string>
    <string name="tv_reg_btn">Register</string>
    <string name="wishlist_title">My WishList</string>
    <string name="cart_title">Cart</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="details_4">- Eight-way hand tied springs</string>
    <string name="details_3">- Sculptured by our Master-Carvers</string>
    <string name="details_2">- Mahogany from certified source</string>
    <string name="details_1">- Doweled mortise and tenon frame in solid</string>
    <string name="details">Details</string>
    <string name="item_material">Solid Wood</string>
    <string name="item_finishing">Java Cafe</string>
    <string name="material">Material</string>
    <string name="finishing">Finishing</string>
    <string name="product_spesification">Product Spesification</string>
    <string name="item_dense">75 cm</string>
    <string name="item_height">80 cm</string>
    <string name="item_width">238 cm</string>
    <string name="dense">Dense</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="dimension">Dimension</string>
    <string name="item_desc">This elegant sofa, with a central oval upholstered feature in solid hand-carved mahogany within the ‘sweetheart’ shaped back, brings a fresh look to classic and contemporary interiors.</string>
    <string name="description">Description</string>
    <string name="item_price">$ 12,862</string>
    <string name="item_nama">Feraud Sofa</string>
    <string name="total">Total :</string>
    <string name="item_totalprice">$12,862</string>
    <string name="go_to_payment">GO TO PAYMENT</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="explore_more_and_shortlist_some_furniture">Explore more and shortlist some furniture</string>
    <string name="start_shopping">START SHOPPING</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="log_out">LOG OUT</string>
    <string name="tv_item_username">farhanmzr</string>
    <string name="tv_phone_number">081227157854</string>
    <string name="tv_item_address">Address</string>
    <string name="tv_item_password">123***</string>
    <string name="profile_title">My Profile</string>
    <string name="transaction_title">Transaction</string>
    <string name="sort_by">Sort By</string>
    <string name="not_confirmed">Not Confirmed</string>
    <string name="confirmed">Confirmed</string>
    <string name="deliver">Deliver</string>
    <string name="tv_sub_noconnection">Make sure wifi or cellular data is turned \n on and then try again .</string>
    <string name="tv_noconnection">Oops, No Internet Connection</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty!</string>
    <string name="int_1">1</string>
    <string name="tv_confirm">Confirm</string>
    <string name="tv_item_email">farhanrio2805@gmail.com</string>
    <string name="change_photo">Change photo</string>
    <string name="tv_phone">Phone Number</string>
    <string name="tv_address">Address</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="manage_shipping">Manage shipping address</string>
    <string name="personal_information">Personal Information</string>
    <string name="address_line">Address Line</string>
    <string name="tv_city">City</string>
    <string name="tv_region">Region</string>
    <string name="zip_code">ZIP Code</string>
    <string name="tv_country">Country</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="tv_fullname">Full Name</string>
    <string name="farhan_mazario">Farhan Mazario</string>
    <string name="tv_new_password">New Password</string>
    <string name="tv_confirm_new_password">Confirm New Password</string>
    <string name="et_chg_pass">Change Password</string>
    <string name="tv_name">Name</string>
    <string name="order_detail">Order Detail</string>
    <string name="cancel">Cancel</string>
    <string name="order_invoice">Order Invoice</string>
    <string name="payment_invoice">Payment Invoice</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="upload_evidence">Upload Evidence</string>
    <string name="upload_payment_proof">Upload Payment Proof</string>
    <string name="to_complete_the_payment_process_please_upload_n_your_proof_of_payment">To complete the payment process, please upload   your proof of payment</string>
    <string name="success_payment">Payment Successful</string>
    <string name="tv_confirm_now">Confirm Now</string>
    <string name="tv_confirm_later">Confirm Later</string>
</resources>
